--- a/web/css/phone.css
+++ b/web/css/phone.css
@@ -91,7 +91,6 @@
 .tablet {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     gap: 40px;
 }
 
